samples/_failures_safe/1761513144_946f8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77da96bf.c: In function ‘main’:
./samples/SAFE/__tmp_77da96bf.c:163:12: error: missing terminating " character
  163 |     printf("
      |            ^
./samples/SAFE/__tmp_77da96bf.c:163:5: error: expected expression at end of input
  163 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_77da96bf.c:163:5: error: expected declaration or statement at end of input
